<resources>
    <string name="app_name">OrderApp</string>
    <string name="login_request">로그인 후 이용해주세요.</string>
    <string name="user_high">님</string>
    <string name="user_hello">님 안녕하세요.</string>
    <string name="hello">안녕하세요.</string>
    <string name="point">포인트</string>
    <string name="p">P</string>
    <string name="store_eat">매장 식사</string>
    <string name="take_out">포장 주문</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="my_info">내정보</string>
    <string name="order">주문하기</string>
    <string name="order_list">주문내역</string>
    <string name="find_store">매장찾기</string>
    <string name="notice">공지사항</string>
    <string name="event">이벤트</string>
    <string name="cacel">취소</string>
    <string name="confirm">확인</string>
    <string name="homepage">홈페이지</string>
    <string name="service_center">고객센터</string>
    <string name="user_info_thanks">백년 누룽지 삼계탕에 오신걸 환영합니다</string>
    <string name="user_benefit_title">사용자 혜택</string>
    <string name="first_benefit">구매 금액에 대해 2% 포인트 전환</string>
    <string name="second_benefit">매장 식사시 1000원 할인</string>
    <string name="third_benefit">포장 주문시 2000원 할인</string>
    <string name="info_setting">개인설정</string>
    <string name="info_setting_try">개인정보 변경</string>
    <string name="alarm_setting">알람 설정</string>
    <string name="user_out">회원 탈퇴</string>
    <string name="my_store">백년 누룽지 삼계탕</string>
    <string name="order_type">주문방법</string>
    <string name="limit_pay">최소주문</string>
    <string name="limit_price">최소주문금액</string>
    <string name="limit_price_int">18000원</string>
    <string name="location_info_title">위치안내</string>
    <string name="location_info_first">경기 부천시 원미구 조마루로 2</string>
    <string name="location_info_second">- 삼산체육관역 1번 출구에서 554m\n- 웅진플레이도시 1층</string>
    <string name="insert_cart">장바구니에 담기</string>
    <string name="cart">장바구니</string>
    <string name="cart_info">장바구니 내역</string>
    <string name="cart_add">장바구니 추가</string>
    <string name="can_use_point">잔액 : </string>
    <string name="all_user_point">전액</string>
    <string name="check_order_price">결제금액을 확인해주세요</string>
    <string name="order_price">주문금액</string>
    <string name="order_point">사용 포인트</string>
    <string name="won">원</string>
    <string name="minus">-</string>
    <string name="total_order_price">총 주문 금액</string>
    <string name="price">가격 :</string>
    <string name="delete_menu">메뉴 삭제</string>
    <string name="username_title">사용할 닉네임을 설정해주세요.</string>
    <string name="username_sub_title">닉네임</string>
    <string name="store">저장하기</string>
    <string name="username_setting_title">닉네임 설정</string>
    <string name="order_list_point_title">P 사용</string>
    <!-- google login string -->
    <string name="default_web_client_id">289118716115-ujs0h8pni715jiosnkn4msp9689uhapd.apps.googleusercontent.com</string>
</resources>