<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="cart_item"
            type="com.samgye.orderapp.data.CartMenuInfo" />

        <variable
            name="cart_view_model"
            type="com.samgye.orderapp.activity.viewmodel.CartViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_cart_menu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{cart_item.menuTitle}"
            tools:text="백년누룽지삼계탕"
            android:textSize="18dp"
            android:fontFamily="@font/pretendard_bold"
            android:textColor="@color/font"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_cart_menu_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/font_gray"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pretendard_medium"
            app:layout_constraintStart_toStartOf="@id/tv_cart_menu_title"
            app:layout_constraintTop_toBottomOf="@id/tv_cart_menu_title" />

        <TextView
            android:id="@+id/tv_cart_menu_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@{String.valueOf(cart_item.menuPrice)}"
            tools:text="18000"
            android:textSize="16dp"
            android:textColor="@color/font_gray"
            android:fontFamily="@font/pretendard_medium"
            app:layout_constraintStart_toEndOf="@id/tv_cart_menu_price_title"
            app:layout_constraintTop_toTopOf="@id/tv_cart_menu_price_title"
            app:layout_constraintBottom_toBottomOf="@id/tv_cart_menu_price_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/won"
            android:textSize="16dp"
            android:textColor="@color/font_gray"
            android:fontFamily="@font/pretendard_medium"
            app:layout_constraintStart_toEndOf="@id/tv_cart_menu_price"
            app:layout_constraintTop_toTopOf="@id/tv_cart_menu_price_title"
            app:layout_constraintBottom_toBottomOf="@id/tv_cart_menu_price_title" />

        <TextView
            android:id="@+id/tv_menu_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            tools:text="18000"
            android:textSize="20dp"
            android:textColor="@color/font"
            android:fontFamily="@font/pretendard_medium"
            app:layout_constraintStart_toStartOf="@id/tv_cart_menu_title"
            app:layout_constraintTop_toBottomOf="@id/tv_cart_menu_price_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/won"
            android:textColor="@color/font"
            android:fontFamily="@font/pretendard_medium"
            android:textSize="20dp"
            app:layout_constraintStart_toEndOf="@id/tv_menu_total"
            app:layout_constraintTop_toTopOf="@id/tv_menu_total"
            app:layout_constraintBottom_toBottomOf="@id/tv_menu_total" />

        <ImageView
            android:id="@+id/iv_cart_menu"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/samgye"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_menu_size_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/border_radius_login_google_12px"
            app:layout_constraintTop_toBottomOf="@id/iv_cart_menu"
            app:layout_constraintEnd_toEndOf="parent" >

            <ImageView
                android:id="@+id/iv_minus_size"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_minus"
                android:layout_margin="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/line_minus" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/line_minus"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/google_login_stroke_btn"
                app:layout_constraintStart_toEndOf="@id/iv_minus_size"
                app:layout_constraintEnd_toStartOf="@id/tv_menu_size"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/tv_menu_size"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:text="@{String.valueOf(cart_item.menuSize)}"
                tools:text="0"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/pretendard_bold"
                android:textColor="@color/font"
                android:gravity="center"
                android:textSize="18dp"
                app:layout_constraintStart_toEndOf="@id/line_minus"
                app:layout_constraintEnd_toStartOf="@id/line_plus"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/line_plus"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/google_login_stroke_btn"
                app:layout_constraintStart_toEndOf="@id/tv_menu_size"
                app:layout_constraintEnd_toStartOf="@id/iv_plus_size"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:id="@+id/iv_plus_size"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_plus"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/line_plus" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_menu"
            android:layout_marginTop="16dp"
            android:textSize="18dp"
            android:textColor="@color/font"
            android:fontFamily="@font/pretendard_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_menu_size_change" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>